--- a/app/views/sections/continue.html.erb
+++ b/app/views/sections/continue.html.erb
@@ -52,6 +52,7 @@
   <div class="actions" style="margin-top:50px">
     <input type="hidden" id="listless" name="listless" value="true">
     <%= submit_tag "Submit", :class => "btn primary", :id => "submit_button" %>
+    <div class="btn secondary" id="help_button" style="margin-left: 15px;">Help</div>
     <%= link_to "Continue Later", root_path, :class => "btn secondary", :style => "float:right;" %>
   </div>
 </div>
