--- a/app/views/pages/_suggested_paths.html.erb
+++ b/app/views/pages/_suggested_paths.html.erb
@@ -6,7 +6,7 @@
   <ul class="media-grid">
     <% paths_list.each_index do |p| %>
       <% if p >= 4 then break else path = paths_list[p] end %>
-      <li><%= link_to image_tag(path.path_pic), path %>
+      <li><%= link_to image_tag(path.path_pic), path, :class => (path.is_locked ? "locked_challenge" : "") %>
     <% end %>
   </ul>
 	<% end %>
