--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -25,6 +25,7 @@
 .suggested-paths ul { margin-top: 5px; }
 .suggested-paths h2  { display: inline; }
 .suggested-paths span { float:right; padding-top:10px; font-style: italic; font-size: 14px; }
+.locked_challenge { opacity: .3; }
 
 /* Task */
 .task ol { margin: 0px 0px 9px 40px; }
