--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -17,7 +17,7 @@
 					<th>#</th>
 					<th>Name</th>
 					<th>User Role</th>
-					<th>Enrolled Challenges</th>
+					<th>Enrolled <%= name_for_paths.pluralize %></th>
 					<th>Points Earned</th>
 					<th>Status</th>
 				</tr>
