--- a/app/views/pages/explore.html.erb
+++ b/app/views/pages/explore.html.erb
@@ -5,12 +5,12 @@
 		<%= submit_tag "Search", :class => "btn primary" %>
 	<% end %>
 	</div>
-	<div><a><h1><%= company_logo %> Challenges</h1></a></div>
+	<div><a><h1><%= company_logo %> <%= name_for_paths.pluralize %></h1></a></div>
 </section>
 <hr/>
 <section id="path_explore">
 <% if @path_categories.empty? %>
-	<p style="padding:30px 20px 300px 20px;">No challenges have been listed for your organization yet. Please check with your administrator to see if your Moonlite instance has been properly configured.</p>
+	<p style="padding:30px 20px 300px 20px;">No <%= name_for_paths.pluralize %> have been listed for your organization yet. Please check with your administrator to see if your Moonlite instance has been properly configured.</p>
 <% else %>
 	<% @path_categories.each do |c| %>
 		
