--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,12 @@
 <section style="margin-bottom:20px">
- <h1 style="margin-bottom: 15px;">My Challenges</h1>
+ <h1 style="margin-bottom: 15px;">My <%= name_for_paths.pluralize %></h1>
 <% if @enrolled_paths.empty? && @completed_paths.empty? %>
 	<hr/>
-  <p>You are not currently enrolled in any challenges.</p>
+  <p>You are not currently enrolled in any <%= name_for_paths.pluralize %>.</p>
   <%= link_to "Get started!", explore_path, :class => "btn primary" %>
 <% elsif @enrolled_paths.empty? && !@completed_paths.empty? %>
 	<hr/>
-  <p>Congratulations! You've completed all your enrolled challenges.</p>
+  <p>Congratulations! You've completed all your enrolled <%= name_for_paths.pluralize %>.</p>
 <% end %>
   <%= render "pages/user_progress", { :paths_list => @enrolled_paths } %>
 	<% if @enable_recommendations %>
