--- a/app/views/paths/edit_settings.html.erb
+++ b/app/views/paths/edit_settings.html.erb
@@ -3,7 +3,7 @@
 <%= form_for(@path) do |f| %>
 	<%= render "shared/error_messages", :object => f.object %>
 	<div class="field clearfix">
-		<%= f.label "Challenge Name" %>
+		<%= f.label name_for_paths+" Name" %>
 		<div class="input">
 			<%= f.text_field :name %>
 		</div>
@@ -11,7 +11,7 @@
 	<div class="field clearfix">
 		<%= f.label :description %>
 		<div class="input">
-			<%= f.text_area :description, :class=>"markitup", :rows => "15", :placeholder => "Try to describe this challenge to others in a couple paragraphs or less..." %>
+			<%= f.text_area :description, :class=>"markitup", :rows => "15", :placeholder => "Try to describe this "+name_for_paths+" to others in a couple paragraphs or less..." %>
 		</div>
 	</div>
 	<div class="field clearfix">
@@ -32,20 +32,20 @@
 			<ul class="inputs-list">
 				<li>
 					<label>
-						<%= f.check_box :is_published, :confirm => "This will publish the challenge so all users in your account can access it. Are you sure you want to publish this now?" %>
-						<span>Publish this challenge to your Moonlite account.</span>
+						<%= f.check_box :is_published %>
+						<span>Publish this <%= name_for_paths %> to your Moonlite account.</span>
 					</label>
 				</li>
 				<li>
 					<label>
-						<%= f.check_box :is_public, :confirm => "This will publish the challenge so all users in your account can access it. Are you sure you want to publish this now?" %>
-						<span>Allow users to post this challenge to their public profile</span>
+						<%= f.check_box :is_public %>
+						<span>Allow users to post this <%= name_for_paths %> to their public profile</span>
 					</label>
 				</li>
 				<li>
 					<label>
 						<%= f.check_box :enable_section_display %>
-						<span>Display section previews on the main challenge page</span>
+						<span>Display section previews on the main <%= name_for_paths %> page</span>
 					</label>
 				</li>
 				<li>
@@ -62,14 +62,8 @@
 				</li>
 				<li>
 					<label>
-						<%= f.text_field :game_type %>
-						<span>Which game type?</span>
-					</label>
-				</li>
-				<li>
-					<label>
 						<%= f.check_box :is_locked %>
-						<span>Lock against access accept to creators and collaborators</span>
+						<span>Make visible but only accessible by creators and collaborators</span>
 					</label>
 				</li>
 			</ul>
@@ -78,6 +72,12 @@
 		<%= f.label "Question Timer (secs)" %>
 		<div class="input">
 			<%= f.text_field :default_timer %>
+		</div>
+		<br>
+		<%= f.label "Game Type", :placeholder => "Advanced users only" %>
+		<div class="input">
+			<%= f.text_field :game_type %>
+			<p><strong>NOTE:</strong> If you are not sure, leave game type blank.</p>
 		</div>
 		<br>
 		<%= f.label "Exclude from leaderboards" %>
@@ -100,7 +100,7 @@
 	</div>
 	<div class="actions">
 		<%= f.submit "Save", :class => "btn primary" %>
-		<%= link_to "View Challenge", @path, :class => "btn secondary" %>
+		<%= link_to "View "+name_for_paths, @path, :class => "btn secondary" %>
 	</div>
 <% end %>
 </section>
