--- a/app/views/paths/hero.html.erb
+++ b/app/views/paths/hero.html.erb
@@ -24,11 +24,11 @@
     <%= image_tag(@user_hero.profile_pic, :size => "100x100") %>
   </div>
   <div style="width: 845px; margin-bottom: 0px;">
-		<h1><strong><%= @user_hero.name %></strong> completed the <strong><%= @path.name %></strong> challenge with a score of <%= @hero_score %>. Can you beat that?</h1>
+		<h1><strong><%= @user_hero.name %></strong> completed the <strong><%= @path.name %></strong> <%= name_for_paths %> with a score of <%= @hero_score %>. Can you beat that?</h1>
       <%= link_to "Begin", path_path(@path), :class => "btn primary", :style => "float:right; margin: 15px 5px 0px 0px;"%>
 	</div>
   <div>
-    <p>Other completed challenges:</p>
+    <p>Other completed <%= name_for_paths.pluralize %>:</p>
     <div>
       <% @other_completed_paths.each do |p| %>
         <%= image_tag p.path.path_pic, :size => "25x25", :title => p.path.name, :style => "margin-right: 15px;" %>
