--- a/app/views/paths/new.html.erb
+++ b/app/views/paths/new.html.erb
@@ -1,8 +1,8 @@
-<h1 style="margin-bottom: 30px;">New Challenge</h1>
+<h1 style="margin-bottom: 30px;">New <%= name_for_paths %></h1>
 <%= form_for(@path) do |f| %>
 	<%= render "shared/error_messages", :object => f.object %>
 	<div class="field clearfix">
-		<label>Challenge name</label>
+		<label><%= name_for_paths %> name</label>
 		<div class="input">
 			<%= f.text_field :name %>
 		</div>
