--- a/app/views/paths/popups/_jumpstart_registration.html.erb
+++ b/app/views/paths/popups/_jumpstart_registration.html.erb
@@ -27,7 +27,7 @@ $(function(){
     <h3>Save your new highscore!</span></h3>
   </div>
   <div class="modal-body">
-    <p style="font-size: 16px; padding:0 7px 5px 10px; line-height: 22px;">Save your score by creating a new account, then you can access other challenges and work your way up the leaderboard!</p>
+    <p style="font-size: 16px; padding:0 7px 5px 10px; line-height: 22px;">Save your score by creating a new account, then you can access other <%= name_for_paths.pluralize %> and work your way up the leaderboard!</p>
 		<p class="form_errors" style="padding:0 7px 5px 10px; color:red; margin-bottom: 15px;"></p>
 		<div style="padding-left:20px;">
 			<div class="clearfix" style="margin-bottom:12px;">
