--- a/app/views/paths/show.html.erb
+++ b/app/views/paths/show.html.erb
@@ -77,7 +77,7 @@
     <% unless @path.is_published %>
       <%= link_to "Publish", edit_path_path(@path, :m => "settings"), :class => "btn primary" %>
     <% end %>
-    <%= link_to "Delete", @path, :method => "delete", :confirm => "Are you sure you want to delete this challenge?", :class => "btn secondary" %>
+    <%= link_to "Delete", @path, :method => "delete", :confirm => "Are you sure you want to delete this "+name_for_paths+"?", :class => "btn secondary" %>
     <%= link_to "Edit", {:controller => "paths", :action => "edit", :id => @path.id }, :class => "btn secondary" %>
   <% end %>
   </div>
