--- a/app/views/sections/edit_tasks.html.erb
+++ b/app/views/sections/edit_tasks.html.erb
@@ -4,7 +4,7 @@
 	<% if @tasks.empty? %>
   <div style="padding: 20px;">
 		<p><strong>Questions</strong> are used to verify someone's <strong>progress</strong> through a section. A question can be something the user must do or a picture they must identify, or simply a multiple choice question.</p>
-    <p>You have not created any questions for this challenge yet. You can get started by:</p>
+    <p>You have not created any questions for this <%= name_for_paths %> yet. You can get started by:</p>
     <ul>
       <li style="padding:5px;">Creating a <%= link_to "new question manually", new_task_path(:section_id => @section) %>.</li>
       <% if @enable_auto_generate %>
