--- a/app/views/user_roles/form.html.erb
+++ b/app/views/user_roles/form.html.erb
@@ -14,19 +14,13 @@
 		</div>
 	</div>
 	<div class="field clearfix">
-		<label>Settings</label>
+		<label>Primary Features</label>
 		<div class="input">
 			<ul class="inputs-list">
 				<li>
 					<label>
 						<%= f.check_box :enable_administration %>
 						<span>Enable Administration</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<%= f.check_box :enable_company_store %>
-						<span>Enable Rewards</span>
 					</label>
 				</li>
 				<li>
@@ -40,23 +34,30 @@
 						<%= f.check_box :enable_dashboard %>
 						<span>Enable Dashboard</span>
 					</label>
-				</li>
-				<li>
-					<label>
-						<%= f.check_box :enable_tour %>
-						<span>Enable Tour</span>
-					</label>
-				</li>            
+				</li>          
 				<li>
 					<label>
 						<%= f.check_box :enable_browsing %>
-						<span>Enable challenge browsing</span>
+						<span>Enable Explore</span>
 					</label>
-				</li>            
+				</li>
+				<li>
+					<label>
+						<%= f.check_box :enable_user_creation %>
+						<span>Enable Create</span>
+					</label>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="field clearfix">
+		<label>Secondary Features</label>
+		<div class="input">
+			<ul class="inputs-list">				
 				<li>
 					<label>
 						<%= f.check_box :enable_comments %>
-						<span>Enable comments on challenges</span>
+						<span>Enable Facebook comment threads for <%= name_for_paths.pluralize %></span>
 					</label>
 				</li>            
 				<li>
@@ -64,41 +65,23 @@
 						<%= f.check_box :enable_news %>
 						<span>Enable news feed</span>
 					</label>
-				</li>					
-				<li>
-					<label>
-						<%= f.check_box :enable_feedback %>
-						<span>Enable feedback on questions</span>
-					</label>
-				</li>            
-				<li>
-					<label>
-						<%= f.check_box :enable_achievements %>
-						<span>Enable achievements</span>
-					</label>
-				</li>						
+				</li>			
 				<li>
 					<label>
 						<%= f.check_box :enable_recommendations %>
-						<span>Enable challenge recommendations</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<%= f.check_box :enable_user_creation %>
-						<span>Enable non-admin user content creation</span>
+						<span>Enable <%= name_for_paths %> recommendations</span>
 					</label>
 				</li>
 				<li>
 					<label>
 						<%= f.check_box :enable_collaboration %>
-						<span>Enable all company admins to view and edit company challenges</span>
+						<span>Enable all users of this user role to collaborate on <%= name_for_paths %> creation</span>
 					</label>
 				</li>
 				<li>
 					<label>
 						<%= f.check_box :enable_auto_enroll %>
-						<span>Enable auto-enrollment of new users in any published challenge</span>
+						<span>Enable auto-enrollment of new users in any published <%= name_for_paths.pluralize %></span>
 					</label>
 				</li>
 				<li>
