Added custom styles to companies.

--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -4,6 +4,7 @@
 		<li><%= link_to "Users", @company %></li>
 		<li class="active"><a href="#">Settings</a></li>
 		<li><%= link_to "User Roles", user_roles_path %></li>
+		<li><%= link_to "Custom Styles", custom_styles_path %></li>
 	</ul>
 	<section id="settings">
 		<h2 style="margin-bottom:15px;">Settings</h2>
