--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -4,6 +4,7 @@
 		<li class="active"><a href="#">Users</a></li>
 		<li><%= link_to "Settings", edit_company_path(@company) %></li>
 		<li><%= link_to "User Roles", user_roles_path %></li>
+		<li><%= link_to "Custom Styles", custom_styles_path %></li>
 	</ul>
 	<section id="users">
 		<h2 style="margin-bottom:15px;">Registered Users</h2>
