--- a/app/views/user_roles/index.html.erb
+++ b/app/views/user_roles/index.html.erb
@@ -4,6 +4,7 @@
 		<li><%= link_to "Users", @company %></li>
 		<li><%= link_to "Settings", edit_company_path(@company) %></li>
 		<li class="active"><a href="#">User roles</a></li>
+		<li><%= link_to "Custom Styles", custom_styles_path %></li>
 	</ul>
 	<section>
 		<h2 style="margin-bottom:15px;">User roles</h2>
