Fixing progress bar

--- a/app/views/sections/_correct_modal.html.erb
+++ b/app/views/sections/_correct_modal.html.erb
@@ -1,6 +1,7 @@
-<div id="correct_modal" class="modal hide fade">
-	<div class="modal-body">
-		<p style="font-size: 30px; padding: 20px; font-weight: bold; color:#57A957; margin-left: 75px;">Correct!</strong></p>
+<div id="correct_modal" class="modal hide fade" style="width: 230px; margin: -200px 0px 0px -150px;">
+	<div class="modal-body" style=" padding: 20px; font-weight: bold; color:#57A957; margin-left: 35px;">
+		<p style="font-size: 30px; ">Correct!</strong></p>
+		<p style="font-size: 30px; font-weight: bold; margin: 20px 0px 0px 20px;">+<%= @last_points %></p>
 	</div>
 </div>
 <script>
