--- a/app/views/sections/_progress_box.html.erb
+++ b/app/views/sections/_progress_box.html.erb
@@ -7,9 +7,10 @@ $(function(){
 </script>
 <section class="progress-box" style="margin-bottom: 50px;">
   <div style="float:right; margin-top: 10px;">
+    <span class="points total">+<%= @earned_points %></span>
     <span class="points streak">+<%= @streak_points %></span>
     <span class="timer">00:30</span>
   </div>
-  <div id="progressbar" style="float:right; margin: 4px; width: 200px; height: 28px;" alt="Progress Bar"></div>
+  <div id="progressbar" style="float:right; margin: 4px; width: 160px; height: 28px;" alt="Progress Bar"></div>
   <div id="correct_status" style="float:right; margin-top:10px; margin-right: 10px; font-weight: bold; font-size: 36px;"></div>
 </section>
