Added start modal to run at first start without jumpstart.

--- a/app/views/sections/_progress_box.html.erb
+++ b/app/views/sections/_progress_box.html.erb
@@ -1,7 +1,7 @@
 <script>
 $(function(){
 	<% unless @correct.nil? %> set_answer_status(<%= @correct %>); <% end %>
-	<% unless @jumpstart %> start_question_timer(); <% end %>
+	<% unless @jumpstart || @earned_points == 0 %> start_question_timer(); <% end %>
 	$("#progressbar").progressbar({ value: <%= @progress %> });
 });
 </script>
