--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
 	<section>
 		<h3>Enrolled <%= name_for_paths.pluralize %></h3>
 		<% if @enrolled_paths.empty? %>
-		<p><%= @user.name %> is not currently enrolled in any publically accessible <%= name_for_paths.pluralize %>.</p>
+		<p><%= @user.name %> is not currently enrolled in any publicly accessible <%= name_for_paths.pluralize %>.</p>
 		<% else %>
 		<table>
       <% @enrolled_paths.each do |path| %>
