--- a/app/views/sections/edit_tasks.html.erb
+++ b/app/views/sections/edit_tasks.html.erb
@@ -1,36 +1,11 @@
 <%= render "tab_navigation" %>
-<%= form_tag({:controller => :sections, :action => :reorder_tasks}, :method => :put) %>
 <section class="tab_content">
-	<% if @tasks.empty? %>
-  <div style="padding: 20px;">
-		<p><strong>Questions</strong> are used to verify someone's <strong>progress</strong> through a section. A question can be something the user must do or a picture they must identify, or simply a multiple choice question.</p>
-    <p>You have not created any questions for this <%= name_for_paths %> yet. You can get started by:</p>
-    <ul>
-      <li style="padding:5px;">Creating a <%= link_to "new question manually", new_task_path(:section_id => @section) %>.</li>
-      <% if @enable_auto_generate %>
-			<li style="padding:5px;">Let Moonlite automatically generate questions from <%= link_to "your section content", questions_section_path(@section) %>.</li>
-      <li style="padding:5px;">Let Moonlite automatically generate questions from <%= link_to "text outside of your section content", edit_section_path(@section, :m => "hidden_content") %>.</li>
-			<% end %>
-		</ul>
-  </div>
-	<% else %>
-	<span class="label" style="font-size: 13px; vertical-align:middle;"><%= @tasks.size %> questions</span>
-  <div style="float: right; margin-bottom:10px;">
-  <% if @reorder %>
-    <%= link_to "Randomize", edit_section_path(@section.id, :m => "randomize"), :class => "btn primary" %>
-    <%= submit_tag "Save", :class => "btn primary" %>
-    <%= link_to "Cancel", edit_section_path(@section.id, :m => "tasks"), :class=> "btn secondary" %>
-  <% else %>
-    <%= link_to "New Question", new_task_path(:section_id => @section.id), :class=>"btn primary" %>
-    <%= link_to "Reorder", edit_section_path(@section.id, :m => "tasks", :a => "reorder"), :class=>"btn secondary" %>
-    <% if @enable_auto_generate %>
-		<%= link_to "Generate", questions_section_path(@section), :class=>"btn secondary" %>
-		<% end %>
-  <% end %>
-	</div>
-		<table>
-		<% @tasks.each do |t| %>
-			<tr class="task"><td>	
+<% display = !@tasks.empty? %>
+<%= render "tasks/new_task_form", { :task => @task, :display => display } %>
+	<table id="task_list">
+	<% @tasks.each do |t| %>
+		<tr class="task">
+			<td>	
 				<blockquote>
 					<p>
 						<%= t.question %>
@@ -40,42 +15,21 @@
 					<%= image_tag t.info_resource.obj.url, :style => "height: 200px; margin: 10px 0px 10px 20px;" %>
 				<% end %>
 				<ol>
-          <% ca = t.correct_answer %>
+					<% ca = t.correct_answer %>
 					<% if !t.answer1.blank? %><li <% if ca == 1 %> class="correct" <% end %>><%= t.answer1 %></li><% end %>
 					<% if !t.answer2.blank? %><li <% if ca == 2 %> class="correct" <% end %>><%= t.answer2 %></li><% end %>
 					<% if !t.answer3.blank? %><li <% if ca == 3 %> class="correct" <% end %>><%= t.answer3 %></li><% end %>
 					<% if !t.answer4.blank? %><li <% if ca == 4 %> class="correct" <% end %>><%= t.answer4 %></li><% end %>
 				</ol>
-        <div style="float:right;display:inline">
-          <% if @reorder %>
-          <div class="field clearfix">
-            <%= label_tag :order %>
-            <div class="input">
-              <select id="task_positions_<%= t.id %>" name="tasks[positions][<%= t.id %>]" class="small">
-                <% (1..@tasks.size).each do |x| %>
-                  <option value="<%= x %>" <%= "selected='selected'" if t.position == x %>><%= x %></option>
-                <% end %>
-              </select>
-            </div>
-          </div>
-          <% else %>
-          <%= link_to "Delete", t, :method => :delete, :confirm => "You sure?", :title => "Delete task", :class => "btn secondary" %>
-          <%= link_to "Edit", edit_task_path(t), :class => "btn secondary" %>
-          <% end %>
-        </div>
-			</tr></td>
-		<% end %>
-		</table>
+				<div style="float:right;display:inline;">
+					<%= link_to "Delete", t, :method => :delete, :confirm => "You sure?", :title => "Delete task", :class => "btn secondary" %>
+					<%= link_to "Edit", edit_task_path(t), :class => "btn secondary" %>
+				</div>
+			</td>
+		</tr>
 	<% end %>
+	</table>
 </section>
 <div class="actions">
-<% if @reorder %>
-	<%= link_to "Randomize", edit_section_path(@section.id, :m => "randomize"), :class => "btn primary" %>
-	<%= submit_tag "Save", :class => "btn primary" %>
-	<%= link_to "Cancel", edit_section_path(@section.id, :m => "tasks"), :class=> "btn secondary" %>
-<% else %>
 	<%= link_to "New Question", new_task_path(:section_id => @section.id), :class=>"btn primary" %>
-	<%= link_to "Reorder", edit_section_path(@section.id, :m => "tasks", :a => "reorder"), :class=>"btn secondary" %>
-	<%= link_to "Generate", questions_section_path(@section), :class=>"btn secondary" %>
-<% end %>
 </div>
