--- a/app/views/tasks/task_form.html.erb
+++ b/app/views/tasks/task_form.html.erb
@@ -25,7 +25,7 @@ function embolden(id){
 </script>
 
 <h1><%= @form_title %></h1>
-<%= form_for @task do |f| %>
+<%= form_for(@task, :remote => true) do |f| %>
 	<%= render "shared/error_messages", :object => f.object %>
 	<%= f.hidden_field :section_id, :value => @section_id %><br/>
 	<div class="field clearfix">
