--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,5 +1,5 @@
-<div class="question_display">
-  <div style="float:right; margin-top:-30px;">
+<div class="question_display row">
+  <div style="float:right; margin-top:0px;">
     <%= link_to "Delete", task,
       :method => :delete, 
       :remote => true,
