--- a/app/views/tasks/_new_task_form.html.erb
+++ b/app/views/tasks/_new_task_form.html.erb
@@ -1,55 +1,4 @@
-<script src="/javascripts/suggestions.js"></script>
-<script>
-var std_url = "<%= root_url %>";
-
-function clear_form(){
-	$("#task_question").val("");
-	$("#task_answer1").val("");
-	$("#task_answer2").val("");
-	$("#task_answer3").val("");
-	$("#task_answer4").val("");
-}
-
-function embolden(id){
-	$("#"+id).css("border", "1px solid #5F5F5F");
-	setTimeout(function(){
-		$("#"+id).css("border", "1px solid #CCC");
-	},50);
-}
-
-function new_answer(answer, answer_index, correct_answer){
-  return "<li "+(correct_answer == answer_index ? "class='correct'" : "")+">"+answer+"</li>"
-}
-
-$(function($) {
-    // Callback for rendering via JSON
-    $('#new_task').on('ajax:success', function(event, data, status, xhr) {
-      if(data.errors){
-				$("#task_form").prepend("<div class='alert-message error'>"+data.errors[0].join(" ")+"</div>");
-			} else {
-				$("#task_form").prepend("<div class='alert-message success'>Task added successfully.</div>");
-				clear_form();
-        var task = data.task;
-				$new_question = $(".task:first").clone().hide();
-				$new_question.find("blockquote p").text(task.question);
-				$answer_list = $new_question.find("ol");
-        $answer_list.html("");
-				if(task.answer1){$answer_list.append(new_answer(task.answer1, 1, task.correct_answer));}
-				if(task.answer2){$answer_list.append(new_answer(task.answer2, 2, task.correct_answer));}
-				if(task.answer3){$answer_list.append(new_answer(task.answer3, 3, task.correct_answer));}
-				if(task.answer4){$answer_list.append(new_answer(task.answer4, 4, task.correct_answer));}
-        $new_question.find("a[data-method='delete']").attr("href","/tasks/"+task.id);
-				$new_question = $new_question.prependTo("#task_list");
-				$(".task:first").show();
-        $(".alert-message").fadeOut(5000);
-        var question_count = $("#question_counter").text(parseInt($("#question_counter").text())+1);
-        console.log($new_question.html());
-        bind_delete_task($new_question.find("a:first"));
-			}
-    });
-});
-</script>
-<%= form_for(task, :remote => true) do |f| %>
+<%= form_for(task, :remote => true, "data-type" => "html") do |f| %>
 <div style="margin-bottom:20px;">
 	<span class="label" style="font-size: 13px; vertical-align:middle;"><span id="question_counter"><%= @tasks.size %></span> questions</span>
 	<div style="float: right;">
@@ -58,7 +7,7 @@ $(function($) {
 		<span id="close_question_button" class="btn secondary" style="display:none;" onclick="$('#task_form,#close_question_button,#save_question_button').hide();$('#new_question_button').show();$('.alert-message').remove();">Close</span>
 	</div>
 </div>
-<div id="task_form" <% if display == true %>style="display:none;"<% end %>>
+<div id="task_form" <% unless display == true %>style="display:none;"<% end %>>
 	<h3 style="margin-left:70px;" id="form_title">Add Question</h3>
   <%= f.hidden_field :section_id, :value => @section.id %><br/>
   <div class="field clearfix">
